change node-sass to just use sass

--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -45,8 +45,8 @@ $body-bg: #edf2f5;
 $body-color: #737373;
 $dark: #5e5e5e;
 
-$info: hsl(188°, 39%, 48%);
-$danger: hsl(6°, 51%, 54%);
+$info: #4b9daa;
+$danger: #c65a4e;
 
 
 @import "bootstrap";
